[package]
name = "wal_all"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.127"
chrono = "0.4.19"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
